examples/invalid/null_keyword.pak
-- INVALID: null_keyword.pak
-- NOTE: This file is DOCUMENTATION ONLY. The bad code is commented out.
-- For actual failing test cases, see tests/invalid/ (verified by pak check).
-- Error: 'null' is not a keyword in Pak. Use 'none'.

entry {
    -- WRONG:
    -- let ptr: ?*i32 = null     -- 'null' does not exist

    -- CORRECT:
    let ptr: ?*i32 = none

    -- WRONG:
    -- if ptr == null { }

    -- CORRECT:
    if ptr == none { }

    let _ = ptr
}
